Prevent all word wrap in table

--- a/docs/css/banlist.css
+++ b/docs/css/banlist.css
@@ -1,6 +1,7 @@
 .banlist-table {
     outline: solid;
     outline-width: 2px;
+    white-space: nowrap;
 }
 
 .banlist-table-header {
